[package]
name = "gitrus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2="0.15.0"
rustls = "0.20.7"
actix-web = { version = "4.2.1", features = ["rustls"] }
toml = "0.5.10"
serde = "1.0.152"
simple-log = "1.5.1"
mongodb = "2.3.1"
totp-rs = "3.1.0"
chrono = "0.4.23"
rand = "0.8.5"
pbkdf2 = "0.11.0"
scrypt = "0.10.0"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.20.0"
jwt-simple = "0.11.2"
lettre = "0.10.1"